[gd_scene load_steps=2 format=3 uid="uid://c0p6nix5yk45t"]

[ext_resource type="Script" path="res://src/scripts/transitions/transition_demo.gd" id="1_3fgdt"]

[node name="TransitionDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_3fgdt")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.3, 0.5, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Fade Transition Demo"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="NormalFadeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Normal Fade (0.5s)"

[node name="SlowFadeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Slow Fade (1.5s)"

[node name="FastFadeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Fast Fade (0.2s)"

[node name="TestSceneButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Go to Test Scene"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Instructions" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Press buttons to test fade transitions
SPACE: Normal fade   R: Reload scene"
horizontal_alignment = 1